[package]
name = "lory"
version = "2020.3.16"
authors = ["Bayu Aldi Yansyah <bayualdiyansyah@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An easy-to-use Rust library for accessing the Twitter API"
documentation = "https://docs.rs/lory/"
homepage = "https://github.com/pyk/lory"
repository = "https://github.com/pyk/lory"
readme = "README.md"
categories = ["api-bindings", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
oauth2 = { version = "3.0", features = ["futures-03", "reqwest-010"], default-features = false }

[dev-dependencies]
warp = "0.2"
